<resources>
    <string name="app_name">GymTeam</string>

    <string name="welcome_title">Welcome to GymTeam</string>

    <string name="welcome_description">Find a workout buddy fast and easy.</string>

    <string name="welcome_button_choose_gym">Choose Your Gym</string>

    <string name="title_activity_gym_picker_list">GymPickerListActivity</string>

    <string name="label_emailpassword">Email/Password Authentication</string>

    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="invite_name">Invite Name:</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="participate">Participate</string>
    <string name="back_to_list">Back To List</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Enter your name...</string>
    <string name="profile_edit">Edit Your Profile</string>

    <string name="action_settings">Settings</string>

    <string name="action_favorite">Favorite</string>

    <string name="users_title">Users:</string>

    <string name="address_title">Address:</string>

    <string name="creator_title">Creator:</string>

    <string name="at_title">At:</string>

    <string name="description_title">Description:</string>

    <string name="title_activity_email_password">EmailPasswordActivity</string>

    <string name="hint_user_id">User ID</string>

    <string name="get_custom_token">Get Token</string>

    <string name="sign_in">Sign In</string>

    <string name="create_account">Create Account</string>

    <string name="sign_out">Sign Out</string>

    <string name="verify_email">Verify Email</string>

    <string name="disconnect">Disconnect</string>

    <string name="loading">Loading…</string>

    <string name="custom_token">Custom Token</string>

    <string name="signed_in">Signed In</string>

    <string name="signed_out">Signed Out</string>

    <string name="token_null">Token: null</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="auth_failed">Authentication failed</string>

    <string name="start_phone_auth">Start</string>

    <string name="verify_phone_auth">Verify</string>

    <string name="resend_phone_auth">Resend</string>

    <string name="hint_phone_number">Phone Number</string>

    <string name="hint_verification_code">Verification Code</string>

    <string name="status_code_sent">Code Sent</string>

    <string name="status_verification_failed">Verification failed</string>

    <string name="status_verification_succeeded">Verification succeeded</string>

    <string name="status_sign_in_failed">Sign-in failed</string>

    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>

    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>

    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="emailpassword_title_text">Welcome to GymTeam</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>

    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>

    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>

    <string name="email_fmt">Email: %s</string>
</resources>
