<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gymteam.tom.gymteam.AddInviteFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/invite_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_name"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/Invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/description_title"
            app:layout_constraintTop_toBottomOf="@+id/invite_name"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/edit_invite_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="hi"
            android:inputType="text"
            app:layout_constraintLeft_toRightOf="@+id/Invite"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/Invite" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:hint="hi"
            android:inputType="text"
            app:layout_constraintBaseline_toBaselineOf="@+id/invite_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/invite_name"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_cancel" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>
